--- a/site/app/stylesheets/console/_help.scss
+++ b/site/app/stylesheets/console/_help.scss
@@ -1,3 +1,12 @@
+.help-block {
+  color: #cfcfcf;
+}
+
+.help-block-multiple {
+  background: transparent;
+}
+
+
 #help {
   padding: 35px 0 0px 0;
   margin: 0;
