Alter head ribbon to use a simpler style of wrapping

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -857,7 +857,7 @@ section#app-cartridges .cartridge-block {
 	
 @media (min-width: 768px) and (max-width: 979px) {
 	.console-head {
-    margin-right: -15px;
+    margin-right: 0;
   }
 	.total-cost {
 		font-size: 23px;
