--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -27,7 +27,7 @@
     .nav-collapse
       = navigation_tabs do
         = navigation_tab :applications, :action => :index, :name => "My Applications"
-        = navigation_tab :application_types, :name => "Create a New Application"
+        = navigation_tab :application_types, :name => "Create Application"
         = navigation_tab :console, :action => :help, :name => "Help"
         = navigation_tab :user, :action => :show, :name => "My Account"
         -#= navigation_tab :help, :show
