--- a/site/app/stylesheets/console/_ribbon.scss
+++ b/site/app/stylesheets/console/_ribbon.scss
@@ -12,44 +12,43 @@
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.18);
   font-weight: 400;
   font-size: 95%;
+  min-height: 23px;
 
+  // Expand the ribbon with a border and a negative left margin
   margin-left: -10px;
   > div {
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
   }
-}
 
-.ribbon:before {
-  border-left: 10px solid transparent;
-  /*border-top: 10px solid #91010B; red version */
-  border-top: 10px solid #000;
-  bottom: -10px;
-  content: "";
-  height: 0;
-  left: 1px;
-  position: absolute;
-  width: 0;
-}
+  &:before {
+    border-left: 10px solid transparent;
+    /*border-top: 10px solid #91010B; red version */
+    border-top: 10px solid #000;
+    bottom: -10px;
+    content: "";
+    height: 0;
+    left: 1px;
+    position: absolute;
+    width: 0;
+  }
 
-.ribbon .more {
-}
-
-.ribbon .more a {
-  /*background-color: #bb161c; red version */
-  background-color: rgba(0, 0, 0, 0.075);
-  float: right;
-  color: #e0e1dd;
-  text-transform: uppercase;
-  /*border-color: transparent #EB0011; red version */
-  border-color: transparent;
-  border-style: solid;
-  border-width: 1.5em 0 1.5em 1.5em;
-  color: #e0e1dd;
-  display: inline-block;
-  line-height: 0;
-  height: 0;
-  padding: 0 30px;
+  .more a {
+    /*background-color: #bb161c; red version */
+    background-color: rgba(0, 0, 0, 0.075);
+    float: right;
+    color: #e0e1dd;
+    text-transform: uppercase;
+    /*border-color: transparent #EB0011; red version */
+    border-color: transparent;
+    border-style: solid;
+    border-width: 1.5em 0 1.5em 1.5em;
+    color: #e0e1dd;
+    display: inline-block;
+    line-height: 0;
+    height: 0;
+    padding: 0 30px;
+  }
 }
 
 @media (max-width: 767px) {
