--- a/site/app/stylesheets/_buttons.scss
+++ b/site/app/stylesheets/_buttons.scss
@@ -19,8 +19,8 @@
   vertical-align: middle;
   //@include buttonBackground($white, darken($white, 10%)); 
   @include border-radius(0); //4px
-  $shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
-  @include box-shadow($shadow);
+  //$shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
+  //@include box-shadow($shadow);
   background-image: -moz-linear-gradient(center top , #ddd 10%, #a4a8b0 100%, #c8cad0 100%);
   border-color: rgba(5, 5, 5, 0.1) rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.5) rgba(5, 5, 5, 0.3);
   cursor: pointer;
