--- a/site/app/stylesheets/console/_ribbon.scss
+++ b/site/app/stylesheets/console/_ribbon.scss
@@ -12,7 +12,7 @@
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.18);
   font-weight: 400;
   font-size: 95%;
-  min-height: 23px;
+  min-height: 32px;
 
   // Expand the ribbon with a border and a negative left margin
   margin-left: -10px;
@@ -28,7 +28,7 @@
     bottom: -10px;
     content: "";
     height: 0;
-    left: 1px;
+    left: 0;
     position: absolute;
     width: 0;
   }
