--- a/site/app/views/user/show.html.haml
+++ b/site/app/views/user/show.html.haml
@@ -21,7 +21,7 @@
               %td= i.id
               - if @show_email
                 %td= i.email
-              %td= i.type.to_s.titleize
+              %td= i.type_name
 
         %p
           We will only use your email account for information about your account. We do not share it with third parties.
