--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -6,6 +6,7 @@
 #new-user
   = semantic_form_for @user, :url => account_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
     %input{:type => "hidden", :name => "redirect", :value => @redirect }
+    %input{:type => "hidden", :name => "captcha_secret", :value => @captcha_secret }
     = form.hidden_field :cloud_access_choice, :value => CloudAccess::EXPRESS
     = form.semantic_errors
     = form.inputs do
@@ -13,7 +14,7 @@
       = form.input :password, :input_html => { :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'At least 6 characters', :maxlength => '50' }
       = form.input :password_confirmation, :input_html => { :class => 'input-xlarge', :autocomplete => 'off', :placeholder => 'Enter it again', :maxlength => '50' }
 
-      - if @user.promo_code.nil?
+      - if @user.promo_code.blank?
         .control-group{:'data-hide-parent' => '1'}
           .controls
             = link_to 'Have a promo code to enter?',
@@ -21,11 +22,11 @@
                 :style => 'font-size: 14px;',
                 :'data-unhide' => '#promo_code'
 
-      #promo_code{:class => @user.promo_code.nil? ? 'hidden' : ''}
+      #promo_code{:class => @user.promo_code.blank? ? 'hidden' : ''}
         = form.input :promo_code, :label => 'Promotional Code', :required => false, :input_html => { :class => 'input-xlarge' }
 
     = form.inputs do
-      = input_recaptcha(:errors => @user.errors[:captcha])
+      = input_recaptcha(:errors => @user.errors[:captcha]) unless @captcha_secret.present?
 
       .control-group.center
         By signing up you agree to the 
