--- a/site/app/views/user/show.html.haml
+++ b/site/app/views/user/show.html.haml
@@ -9,22 +9,22 @@
       = div_for @user do
         %h2 Personal Information
 
+        %p
+          OpenShift currently allows access via the Red Hat Network (RHN) or through an account created with your e-mail and a password.
+
         %table.table
           %thead
             %tr
-              %th Login
+              %th{:title => 'The account name you will use to log in'} Login
               - if @show_email
                 %th Email
-              %th Service
+              %th Account Type
           - @identities.each do |i|
             %tr
               %td= i.id
               - if @show_email
                 %td= i.email
-              %td= i.type_name
-
-        %p
-          We will only use your email account for information about your account. We do not share it with third parties.
+              %td= i.url.present? ? link_to(i.type_name, i.url, :class => 'external') : i.type_name
 
         .btn-toolbar
           = link_to "Change password...", edit_password_path, :class => 'btn'
