--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -11,17 +11,23 @@
 = semantic_form_for @application, :html => {:class => 'form-horizontal'} do |f|
   = f.hidden_field :application_type, :value => @application_type.id
 
+  - errors = @application.errors.full_messages.present?
   = f.semantic_errors :name, :domain_name, :node_profile
 
   = f.inputs do
     -# This is implemented custom here rather than integrating into Formtastic because of its specific nature
-    .control-group.control-group-important{:class => @application.errors[:name].present? || @application.errors[:domain_name].present? ? 'error' : '', :data => @application.errors[:name].present? || @application.errors[:domain_name].present? ? {:"server-error" => 'server-error'} : {}}
+    .control-group.control-group-important{:data => errors ? {:"server-error" => 'true'} : {}}
       %label.control-label Public URL
       .controls
         .input-prepend-append
           %span.add-on-first http://
 
-          = f.text_field :name, :value => "#{@application.name}", :autofocus => true, :maxlength => 32, :placeholder => 'Application name', :class => 'application_name'
+          = f.text_field :name, 
+            :value => "#{@application.name}", 
+            :autofocus => true, 
+            :maxlength => 32, 
+            :placeholder => 'Application name', 
+            :class => "application_name #{'error' if @application.errors.include? :name}"
 
           -# If the user has a domain, use it, otherwise prompt them for that field
           - if @domain and @domain.persisted?
@@ -31,9 +37,13 @@
           - else
 
             %span.add-on-middle> &ndash;
-            = f.text_field :domain_name, :value => "#{@application.domain_name}", :placeholder => 'Namespace', :maxlength => 16, :class => 'domain_name'
+            = f.text_field :domain_name, 
+              :value => "#{@application.domain_name}", 
+              :placeholder => 'Namespace', 
+              :maxlength => 16, 
+              :class => "domain_name #{'error' if @application.errors.include? :domain_name}"
             %span.add-on-last>= ".#{Rails.configuration.base_domain}"
-        .row.control-group.error
+        -#.row.control-group.error
           #app-errors.span
         .row
           - if @domain and @domain.persisted?
@@ -49,7 +59,7 @@
               %strong Namespace
               %p
                 Because this is your first application, you need to set a name under which your applications will be grouped
-    - if @gear_sizes and @gear_sizes.length > 1
+    -# if @gear_sizes and @gear_sizes.length > 1
       .control-group
         %label{:for => :gear_profile, :class => "control-label"} Gear Size
         = f.input :gear_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
