--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -1,14 +1,62 @@
-/*
-  Draft CSS for the Management Console
-*/
+// Management Console //
+
+/* OpenShift color palette
+ --------------------------------------------
+  0   0   0    000000     Black
+177 229 242    b1e5f2			Primary Blue
+ 54  53  52    363634     Primary Dark Gray
+ 77  79  83    4d4f53     Cool Gray 11
+154 155 156    9a9b9c     Cool Gray 7
+188 189 188    bcbdbc     Cool Gray 4
+224 225 221    e0e1dd     Cool Gray 1
+255 255 255    ffffff     White
+234   0  17    ea0011     Bright Red
+205  32  44    cd202c     Primary Red
+161   0  12    a1000c     Dark Red
+
+Console colors		
+Grayscale (light -> dark) based on 9a9b9c - Cool Gray 7
+--------------------------------------------------------------------------------------------------------------------------
+fafbfc	eaebec	dadbdc	cacbcc	babbbc	9a9b9c 8a8b8c	9a9b9c	7a7b7c	6a6b6c	5a5b5c 4a4b4c	3a3b3c	2a2b2c	1a1b1c 0a0b0c
+	1				2				3				4				5				6			 7			8				9				10			11			12		13			14			15		16
+-------------------------------------------------------------------------------------------------------------------------- */
+
+
+// Defaults before partials
+// -----------------------------------------------------
+
+body {
+    font-family: "Helvetica Neue",Helvetica,"Liberation Sans",Arial,sans-serif;
+		font-weight: normal;
+    }
+h1,h2,h3,h4,h5,h6 {
+		color: #fafbfc;
+		}
+a,a:visited {color:#7EABB6;}
+a:hover,a:active {color:#b1e5f2;}
+
+.label {
+	padding: 1px 3px 1px;
+	}
+
+
+// import partials 
+// ------------------------------------------------------
 
 @import "variables";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 @import "mixins";
-
-
 @import "bootstrap/dropdowns";
+
+
+@import "console/navbar";
+@import "console/help";
+@import "console/breadcrumbs";
+@import "console/ribbon";
+@import "console/buttons";
+
+
 
 .dropdown-menu {
   background: black;
@@ -16,28 +64,14 @@
   min-width: 1px;
   float: none;
 }
-
 .dropdown-menu a {
-  color: #b1e5f2;
+  color: #9a9b9c;
 }
-
 .dropdown-menu > li > a:hover {
   border-radius: 0px;
-  background-color: #cd202c;
+  background-color: #5a5b5c;
 }
 
-
-@import "console/navbar";
-
-@import "console/help";
-
-@import "console/breadcrumbs";
-
-@import "console/ribbon";
-
-/*------------------------------------------------------
-	 Console specific styles
-	------------------------------------------------------ */
 
 .alert {
   word-wrap: break-word;
@@ -56,6 +90,7 @@
 	font-size: 250%;
 	margin-top: 20px;
 	}
+/* I think this is from initial console release and can be removed
 .app-block {
    background: #f0f0f0;
    margin-bottom: 15px;
@@ -71,6 +106,7 @@
 .app-block > .row > ul > li:last-child > a {
   margin-right: 10px;
   }
+*/
 .app-block h2 {
   word-wrap: break-word;
   }
@@ -84,30 +120,6 @@
   width: 31px;
 	}
 
-/* OpenShift color palette
- -------------------------------------------------------------------
-  0   0   0    000000     Black
-177 229 242    b1e5f2			Primary Blue
- 54  53  52    363634     Primary Dark Gray
- 77  79  83    4d4f53     Cool Gray 11
-154 155 156    9a9b9c     Cool Gray 7
-188 189 188    bcbdbc     Cool Gray 4
-224 225 221    e0e1dd     Cool Gray 1
-255 255 255    ffffff     White
-234   0  17    ea0011     Bright Red
-205  32  44    cd202c     Primary Red
-161   0  12    a1000c     Dark Red
- ------------------------------------------------------------------- */
-
-
-/* changes to common */
-.label {
-	padding: 1px 3px 1px;
-	}
-body {
-    font-family: "Helvetica Neue",Helvetica,"Liberation Sans",Arial,sans-serif;
-		font-weight: normal;
-    }
 
 /* changes to bootstrap */
 @media (max-width: 480px) {
@@ -163,57 +175,6 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 input:-moz-placeholder, textarea:-moz-placeholder {
  color: #777;
 	}
-	
-h1,h2,h3,h4,h5,h6 {
-		color: #e0e1dd;
-		}
-a,a:visited {
-	color:#7EABB6;
-	}
-a:hover,a:active {color:#8addf2;}
-
-
-.btn, 
-a.btn {
-	background-color: #4c4c4c;
-	background-image: -moz-linear-gradient(center top, #505050, #333 5%, #1f1f1f 100%, #333 100%);
-	color: #ccc;
-  line-height: 17px;
-	text-shadow: 0 -1px 1px #000000;
-	border-color: #010101;//rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.25);
-}
-
-.btn:hover, 
-a.btn:hover {
-	color: #fff;
-	background-color: #4c4c4c;
-	background-image: -moz-linear-gradient(center top , #4c4c4c 10%, #333 100%, #4c4c4c 100%);
-}
-
-.btn:active {
-  color: rgba(0,0,0,0.5); // custom
-  border-color: rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.1) rgba(255, 255, 255, 0.1);
-}
-
-
-.btn-primary, a.btn-primary {
-  border-color: transparent;
-	background: #b1e5f2;
-	background-image: -moz-linear-gradient(center top , #94dbed 10%, #7CA1AA 100%, #94dbed 100%);
-	color: $grayDark;
-	text-shadow: 0 1px 0 #DFDFDF;
-}
-.btn-primary:hover, a.btn-primary:hover {
-	background-color: #85d6eb;
-	background-image: none;
-	color: $grayDark;
-	text-shadow: 0 1px 0 #DFDFDF;
-}
-.btn-primary:active, a.btn-primary:active {
-	border-color: rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.35) rgba(5, 5, 5, 0.2) rgba(5, 5, 5, 0.15);
-	background-color: #b1e5f2;
-	@include box-shadow(none);
-}
 
 
 .well {
@@ -223,7 +184,7 @@ code, pre {
 	background-color: inherit;
   border: 1px dotted #444;
   border-radius: 0 0 0 0;
-  color: #AAA;
+  color: #babbbc;
 	}
 ol.wizard {
 	margin: 0 0 15px 5px;
@@ -318,8 +279,8 @@ figure {
 	}
 
 .console-head {
-	background: #1a1a1a;
-	border-bottom: 3px solid #1f1f1f;
+	background: #212121;
+	border-bottom: 3px solid #2a2a2a;
 	padding: 15px 0 10px 0;
 	margin: 0 -25px 0 5px;
 	}
@@ -352,7 +313,7 @@ figure {
     text-align: right;
 		}
 .console-head * {
-	color: #e0e1dd;
+	color: #eaebec;
 	}
 
 #footer-nav {
@@ -360,14 +321,8 @@ figure {
 }
 
 .row-console > .row {
-  background: #010101;
-  background-image: -webkit-gradient(linear, center top, center bottom, from(#050505 88%), to(#010101));
-  background-image: -webkit-linear-gradient(top, #050505 88%, #010101);
-  background-image: -moz-linear-gradient(top, #050505 88%, #010101);
-  background-image: -o-linear-gradient(top, #050505 88%, #010101);
-  background-image: -ms-linear-gradient(top, #050505 88%, #010101);
-  background-image: linear-gradient(to bottom, #050505 88%, #010101);
-  color: #8f8f8f;
+  background: #000;
+  color: #9a9b9c;
 }
 
 .section-console-light .row-console > .row {
@@ -455,15 +410,15 @@ figure {
 		background-position: 0 -30px;
 		}
     .digest-bg {
-    	background-color: #1a1a1a;
-    	border-bottom: 3px solid #1f1f1f;
+    	background-color: #212121;
+    	border-bottom: 3px solid #2a2a2a;
     	margin: 0 -25px;
     	padding: 20px 25px;
     	}
 
 #app-list, #account-digest {
  margin-top: 0;
- color: #939598;
+ color: #9a9b9c;
 }
 .app-full-path {
 	color: #9a9b9c;
@@ -504,10 +459,6 @@ figure {
   }
 }
 
-.btn-primary.btn-large {
-  text-transform: uppercase;
-}
-
 .nav {
 	margin-bottom: 6px;
 	}
@@ -536,7 +487,7 @@ figure {
   font-size: 12px;
   }
   	.nav-pills.console-overview > li > a:hover {
-  		color: #1a1a1a;
+  		color: #212121;
   		/*background-color: #808184;*/
 		  background-color: #b1e5f2;
 		  background-image: -webkit-gradient(linear, left top, left bottom, from(#b1e5f2), to(#7ca1aa));
@@ -549,7 +500,7 @@ figure {
 
 .nav-pills.console-overview .active > a,
 .nav-pills.console-overview .active > a:hover {
-  color: #1a1a1a;
+  color: #212121;
   background-color: #808184;
   cursor: default;
   }
@@ -616,7 +567,7 @@ a.cap-link {
     padding: 8px 8px 8px 20px;
     position: relative;
     width: 130px;
-    color: #939598;
+    color: #9a9b9c;
     text-decoration: none;
     font-weight: 500;
     border-left: 2px solid transparent;
@@ -628,7 +579,7 @@ a.cap-link {
 			}
 		#app-cartridges header .add-cart-btn span.sprite {
 			background-position: 10px -50px;
-			background-color: #171717;
+			background-color: #1d1d1d;
 			width: 35px;
 			height: 35px;
 			position: absolute;
@@ -646,10 +597,10 @@ a.cap-link {
 	margin-right: 30px;
 	}
 section#app-cartridges .cartridge-block {
-	background-color: #171717;
+	background-color: #1d1d1d;
 		padding: 15px 0;
-		border-top: 3px solid #1f1f1f;
-		border-bottom: 3px solid #1f1f1f;
+		border-top: 3px solid #2a2a2a;
+		border-bottom: 3px solid #2a2a2a;
 		margin-top: 5px;
 		margin-bottom: 15px;
 	}
@@ -759,12 +710,12 @@ section#app-cartridges .cartridge-block {
 		border-bottom: 1px solid #222222;
 		}
 .section-console h6 {
-	color: #8f8f8f;
+	color: #9a9b9c;
  	font-weight: normal;
   }
 .data {
 	font-size: 125%;
-	color: #e0e1dd;
+	color: #eaebec;
 	}
 
 .tile {
@@ -807,11 +758,21 @@ section#app-cartridges .cartridge-block {
   cursor: default;
   }
 
-/* responsive widths */
+
+
+//	Responsive customizations
+//	-----------------------------------------------------
+
 @media (max-width: 480px) {
-.embedded .view-cart-details {
+	.embedded .view-cart-details {
     position: inherit;
     }
+  #my-apps .status {
+		position: static;
+		}
+	#my-apps li h2 {
+		float: none;
+		}
 }
 
 @media (max-width: 767px) {
@@ -849,46 +810,7 @@ section#app-cartridges .cartridge-block {
   #secondary {
   	margin: 0 30px;
   	}
-}
-	
-@media (min-width: 768px) and (max-width: 979px) {
-	.console-head {
-    margin-right: -15px;
-  }
-	.total-cost {
-		font-size: 23px;
-		}
-	.digest-bg {
-    margin-right: -15px;
-    margin-left: -15px;
-    }
-}
-
-@media (min-width: 980px) and (max-width: 1199px) {
-	.console-head {
-    margin-right: -23px;
-  }
-  .digest-bg {
-  	margin: 0 -23px;
-  }
-}	 
-
-@media (min-width: 1200px) {
-}
-
-/*	Responsive customizations
-	--------------------------------------------------------- */
-
-@media (max-width: 480px) {
-	#my-apps .status {
-		position: static;
-		}
-	#my-apps li h2 {
-		float: none;
-		}
-}
-@media (max-width: 767px) {
-	#my-apps li h2 {
+  #my-apps li h2 {
 		float: right;
 		}
 	section#console-mast .row ul.unstyled-flat li.span7.right { text-align: left; } 
@@ -907,20 +829,42 @@ section#app-cartridges .cartridge-block {
     font-size: inherit;
    	}
 }
+	
 @media (min-width: 768px) and (max-width: 979px) {
-	#my-apps li h2 {
+	.console-head {
+    margin-right: -15px;
+  }
+	.total-cost {
+		font-size: 23px;
+	}
+	.digest-bg {
+    margin-right: -15px;
+    margin-left: -15px;
+   }
+  #my-apps li h2 {
 		float: none;
-		}
+	}
 	#my-apps .status {
 		position: static;
-		}
+	}
+}
+
+@media (min-width: 980px) and (max-width: 1199px) {
+	.console-head {
+    margin-right: -23px;
+  }
+  .digest-bg {
+  	margin: 0 -23px;
+  }
+}	 
+
+@media (min-width: 1200px) {
 }
 @media (max-width: 979px) {
 }
 @media (min-width: 980px) {
 }
-@media (min-width: 1200px) {
-}
+
 
 .form-search {
   position: relative;
