--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -76,6 +76,9 @@ $primaryButtonBackground:       #4e9fdd;
 $orange:                        #ffb02e;
 $linkColor:                     #0069d6;
 
+$activeButtonDarkColor:					rgba(0,0,0,0.5);
+$activeButtonLightColor:				rgba(255,255,255,0.5);
+
 /* FIXME: Need to resolve these colors with _custom.scss */
 $warningText:             #222;
 $warningBackground:       #ffd24e;
