--- a/site/app/stylesheets/common.scss
+++ b/site/app/stylesheets/common.scss
@@ -39,7 +39,7 @@
 
 // Components: common
 //@import "bootstrap/sprites";
-//@import "bootstrap/dropdowns";
+@import "bootstrap/dropdowns";
 @import "bootstrap/wells";
 @import "bootstrap/component-animations";
 @import "bootstrap/close";
