--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -75,13 +75,8 @@
   word-wrap: break-word;
   }
 
-.console .icon-loading {
+.icon-loading {
 	background: transparent url('../images/loader-dark.gif') 0 0 no-repeat;
-	display: inline-block;
-  height: 31px;
-  margin: 0 5px;
-  vertical-align: middle;
-  width: 31px;
 	}
 
 /* OpenShift color palette
