--- a/site/app/stylesheets/console/_help.scss
+++ b/site/app/stylesheets/console/_help.scss
@@ -11,6 +11,10 @@
   padding: 35px 0 0px 0;
   margin: 0;
   background-color: #070707;
+  
+  .container {
+  	border-bottom:1px dotted #2a2b2c;
+  }
 }
 
 #help p {
