--- a/site/app/views/styleguide/console.html
+++ b/site/app/views/styleguide/console.html
@@ -1,15 +1,6 @@
-
-    <!--link href="/app/stylesheets/overpass.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/app/stylesheets/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/app/stylesheets/console.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/app/stylesheets/console-new.css" media="all" rel="stylesheet" type="text/css" / --> 
-    
     <link href="/stylesheets/common.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/console.css" media="all" rel="stylesheet" type="text/css" /> 
-  
-  
-  
-  <!-- body id="overview" class="console console-transition applications index" -->
+
 <header>
       <div class='navbar'>
         <div class='container'>
@@ -339,7 +330,7 @@
       <section id='copyright'>
         <div class='container'>
           <a href='https://www.redhat.com/'>
-            <img alt='Red Hat' src='/app/images/redhat.png?1335908935'>
+            <img alt='Red Hat' src='/images/redhat.png?1335908935'>
           </a>
           <div class='pull-right'>Copyright &copy; 2012 Red Hat, Inc.</div>
         </div>
