--- a/site/app/views/cartridge_types/show.html.haml
+++ b/site/app/views/cartridge_types/show.html.haml
@@ -8,12 +8,12 @@
 
 = semantic_form_for @cartridge, :url => application_cartridges_path(@application), :html => {:class => 'form'} do |f|
   = f.hidden_field :type, :value => @cartridge_type.type
-  = f.hidden_field :name, :value => @cartridge_type.id
+  = f.hidden_field :name, :value => @cartridge_type.name
   = f.semantic_errors :name
   %div
     Do you want to add the
     %strong
-      #{@cartridge_type.name}
+      #{@cartridge_type.display_name}
     cartridge to your application?
   = f.buttons do
     = link_to "Back", application_cartridge_types_path(@application), :class => 'btn'
