--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -72,7 +72,7 @@ $takeActionHighlightBackground: #91010b;
 $grayLighter:										#ededed;
 $grayLight:                     #999;
 $grayDark:                      #2f2f2f;
-$primaryButtonBackground:       #4e9fdd;
+$primaryButtonBackground:       #B1E5F2;
 $orange:                        #ffb02e;
 $linkColor:                     #0069d6;
 
