--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -25,7 +25,6 @@ Grayscale based on 9a9b9c - Cool Gray 7 (light -> dark)
 ----------------------------------------------------------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------------------------------- */
 
-
 // Defaults before partials
 // -----------------------------------------------------
 
@@ -58,7 +57,7 @@ a:hover,a:active {color:#b1e5f2;}
 @import "console/help";
 @import "console/breadcrumbs";
 @import "console/ribbon";
-@import "console/buttons";
+// @import "console/buttons";
 
 
 
