--- a/site/app/stylesheets/_buttons.scss
+++ b/site/app/stylesheets/_buttons.scss
@@ -17,17 +17,12 @@
   text-align: center;
   text-shadow: 0 1px 0 #DFDFDF;
   vertical-align: middle;
-  //@include buttonBackground($white, darken($white, 10%)); 
-  @include border-radius(0); //4px
-  //$shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
-  //@include box-shadow($shadow);
-  //background-image: -moz-linear-gradient(center top , #ddd 10%, #a4a8b0 100%, #c8cad0 100%);
+  @include border-radius(0); 
   @include gradient-vertical($startColor: #ddd, $endColor: #a4a8b0);
   border-color: rgba(5, 5, 5, 0.1) rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.5) rgba(5, 5, 5, 0.3);
   cursor: pointer;
   border-style: solid;
   border-width: 1px;
-  //text-transform: uppercase;
 
   // Give IE7 some love
   @include reset-filter();
@@ -35,6 +30,7 @@
 
   *margin-left: .3em; //?
 }
+
 .btn:first-child {
   *margin-left: 0;
 }
@@ -43,10 +39,9 @@
 // Hover state
 .btn:hover {
   color: $grayDark;
-  background: -moz-linear-gradient(center top , #efefef 10%, #adb0b8 100%, #DFE3EC 100%) repeat scroll 0 0 transparent;
+  background-color: #adb0b8;
   text-decoration: none;
-  //background-color: darken($white, 10%);
-  //background-position: 0 -15px;
+  background-image:none;
 
   // transition is only when going to hover, otherwise the background
   // behind the gradient (there for IE<=9 fallback) gets mismatched
@@ -61,13 +56,11 @@
 // Active state
 .btn:active {
   background-image: none;
-  //$shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
-  //@include box-shadow($shadow);
   background-color: darken($white, 20%);
   background-color: darken($white, 25%) #{"\9"};
   outline: 0;
   color: rgba(0,0,0,0.5); // custom
-  border-color: rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.35) rgba(5, 5, 5, 0.2) rgba(5, 5, 5, 0.15);
+  border-color: rgba(5, 5, 5, 0.4) rgba(5, 5, 5, 0.4) rgba(5, 5, 5, 0.25) rgba(5, 5, 5, 0.25);
 }
 
 // Disabled state
@@ -90,7 +83,6 @@
   padding: 9px 14px;
   font-size: $baseFontSize + 2px;
   line-height: normal;
-  //@include border-radius(2px); //5px
 }
 .btn-large [class^="icon-"] {
   margin-top: 1px;
@@ -131,8 +123,13 @@
 .btn-info:hover,
 .btn-inverse,
 .btn-inverse:hover {
-  text-shadow: 0 -1px 0 rgba(0,0,0,.38); //tweaked
+  text-shadow: -1px 0px 1px rgba(0, 0, 0, 0.5); //tweaked
   color: $white;
+}
+.btn-primary,
+.btn-primary:hover {
+	color: $grayDark;
+	text-shadow: 0 1px 0 rgba(255,255,255,.7);
 }
 // Provide *some* extra contrast for those who can get it
 .btn-primary.active,
@@ -144,10 +141,10 @@
   color: rgba(255,255,255,.75);
 }
 
-// Set the backgrounds
+// Set the backgrounds and changes from default
 // -------------------------
 .btn-primary {
-  @include buttonBackground($primaryButtonBackground, adjust-hue($primaryButtonBackground, 20));
+  @include buttonBackground($primaryButtonBackground, darken( $primaryButtonBackground, 15% ));
 }
 // Warning appears are orange
 .btn-warning {
@@ -167,7 +164,8 @@
 }
 // Inverse appears as dark gray
 .btn-inverse {
-  @include buttonBackground(#454545, #262626);
+  @include buttonBackgroundInverse(#505050, #1f1f1f);
+  border-color: #010101;
 }
 
 
